--- a/wwwroot/css/Example/main2.css
+++ b/wwwroot/css/Example/main2.css
@@ -1,10 +1,10 @@
 
-.survey { }
+.survey {  }
 .survey .header { margin-left:7px;}
 .survey .header .title { font-size:3em;}
 
 
-.page-set {}
+.page-set {background-color: #f5f9fb }
 .page {}
 .page .hide { display: none; }
 .page .show{ display: inline; }
@@ -18,7 +18,7 @@
 
 
 .questions {}
-.questions .question {padding:30px; margin-bottom:10px; background-color: white}
+.questions .question {padding:30px; margin-bottom:10px; background-color: white; border: 1px solid #cccccc; font-family: 'NanumGothic'}
 
 .question .hide { display: none; }
 .question .show { display: inline; }
@@ -29,7 +29,7 @@
 
 
 /* .question .header .description { padding:4px;  font-size: 0.9em; margin-left: 10px; border:1px solid #C3C3C3;} */
-.question .header .description { padding:4px;  font-size: 14px; margin-left: 10px; color:#14a5e6}
+.question .header .description { font-size: 14px; margin-left: 10px; color:#14a5e6;}
 
 
 /* Question itmes */
