--- a/Views/Survey/Progress.cshtml
+++ b/Views/Survey/Progress.cshtml
@@ -5,7 +5,7 @@
     Layout = "~/Views/Shared/Survey/_Layout.cshtml";
     
 }
-<link rel="stylesheet" type="text/css" media="screen" href="~/css/Example/main2.css" />
+<link rel="stylesheet" type="text/css" href="~/css/Example/main2.css" />
 
 <environment include="Development">
     <script src="~/js/Example/view2.js"></script>
