결과 페이지

--- a/Views/Home/Edit.cshtml
+++ b/Views/Home/Edit.cshtml
@@ -126,7 +126,7 @@
                     var data = {
                         _channelID : '@Model.survey.ChannelID',
                         Survey : JSON.parse(surveyJson),
-                        _id : '@Model.survey._id'
+                        _id : '@Model.survey.SurveyID'
                     }
                     var self = this;
                     $.ajax({
