--- a/Views/Home/List.cshtml
+++ b/Views/Home/List.cshtml
@@ -40,11 +40,12 @@
     <table class="table table-bordered table-hover">
         <colgroup>
             <col width="10%"/>
-            <col width="40%"/>
+            <col width="30%"/>
             <col width="20%"/>
             <col width="10%"/>
             <col width="10%"/>
             <col width="10%"/>
+            <col width="15%"/>
         </colgroup>
         <thead>
             <tr class="info">
@@ -52,6 +53,7 @@
                 <th>설문제목</th>
                 <th>기간</th>
                 <th>참여인원</th>
+                <th>결과페이지</th>
                 <th>삭제</th>
                 <th>URL복사</th>
             </tr>
@@ -61,6 +63,7 @@
             <td><a :href="editActionUrl(s._id, s.channelID)">{{s.title}}</a></td>
             <td>{{s.startDateAndEndDate}}</td>
             <td>{{s.limitPersonsStr}}</td>
+            <td class="text-center"><button class="btn btn-success" v-on:click="resultPageRedirect(s._id)" >이동</button> </td>
             <td class="text-center"><button class="btn btn-danger" v-on:click="deletesurvey(s._id)" >삭제</button> </td>
             <td class="text-center"><button class="btn btn-info" v-on:click="copy_to_clipboard(s._id)" >복사</button> </td>
         </tr>     
@@ -109,6 +112,9 @@ var vue = new Vue({
         });
     }, 
     methods : {
+        resultPageRedirect : function(UBSurveyID) {
+            location.href = '@Url.Action("result", "home")/?UBSurveyID=' + UBSurveyID; 
+        },
         copy_to_clipboard : function(UBSurveyID) {
             var d = '@this.Model.Item5' + '/?UBSurveyID=' + UBSurveyID;
             if(this.is_ie()) {
@@ -126,11 +132,11 @@ var vue = new Vue({
             return false;
         },
         createSurvey : function(){
-            location.href = '/home/edit/?channelID=' + this.searchData.channelid;
+            location.href = '@Url.Action("edit", "home")/?channelID=' + this.searchData.channelid;
         },
         search : function(){
             var params = $.param(this.searchData);
-            var actionUrl = '';
+            var actionUrl = '@Url.Action("List", "Home")';
             console.log(params);
             if (params == '') {
                 actionUrl = '/?pageindex=' + vue.pager.PageIndex;
@@ -141,7 +147,7 @@ var vue = new Vue({
             location.href = actionUrl;
         },
         editActionUrl : function(_id, channelID){
-             return '/home/edit/?ubsurveyid=' + _id + '&channelID=' + channelID;
+             return '@Url.Action("edit", "home")/?ubsurveyid=' + _id + '&channelID=' + channelID;
         },
         createActionUrl : function(pid){
             var params = $.param(this.searchData);
