--- a/Views/Shared/_Layout.cshtml
+++ b/Views/Shared/_Layout.cshtml
@@ -41,7 +41,7 @@
             </div>
         </div>
     </nav>
-    <div class="container body-content">
+    <div id="bodyContents" class="container body-content">
         @RenderBody()
         <hr />
         <footer>
