--- a/wwwroot/css/edit.css
+++ b/wwwroot/css/edit.css
@@ -1,4 +1,5 @@
-body, html{ height:102%; }
+
+body, html{ height:102%;font-family: 'Nanum Gothic'; }
 /*  navbar */
 
 .logo-container {padding-top:20px; padding-bottom:22px; margin: 0}
