--- a/Views/Home/Complete.cshtml
+++ b/Views/Home/Complete.cshtml
@@ -1,12 +1,12 @@
 
-@section Scripts {
+<!-- @section Scripts {
 <environment include="Development">
     <script src="~/js/vue.min.js"></script>
 </environment>
 <environment include="Production">    
     <script src="~/js/vue.min.js"></script>
 </environment>
-}
+} -->
 
 <script>
     /*
