--- a/Views/Home/List.cshtml
+++ b/Views/Home/List.cshtml
@@ -53,7 +53,7 @@
                 <th>설문제목</th>
                 <th>기간</th>
                 <th>참여인원</th>
-                <th>결과페이지</th>
+                <th>결과</th>
                 <th>삭제</th>
                 <th>URL복사</th>
             </tr>
@@ -63,7 +63,7 @@
             <td><a :href="editActionUrl(s._id, s.channelID)">{{s.title}}</a></td>
             <td>{{s.startDateAndEndDate}}</td>
             <td>{{s.limitPersonsStr}}</td>
-            <td class="text-center"><button class="btn btn-success" v-on:click="resultPageRedirect(s._id)" >이동</button> </td>
+            <td class="text-center"><a v-on:click="resultPageRedirect(s._id)" href="#" >결과보기</a> </td>
             <td class="text-center"><button class="btn btn-danger" v-on:click="deletesurvey(s._id)" >삭제</button> </td>
             <td class="text-center"><button class="btn btn-info" v-on:click="copy_to_clipboard(s._id)" >복사</button> </td>
         </tr>     
@@ -116,7 +116,7 @@ var vue = new Vue({
             location.href = '@Url.Action("result", "home")/?UBSurveyID=' + UBSurveyID; 
         },
         copy_to_clipboard : function(UBSurveyID) {
-            var d = '@this.Model.Item5' + '/?UBSurveyID=' + UBSurveyID;
+            var d = '@Url.Action("index", "home")/?UBSurveyID=' + UBSurveyID;
             if(this.is_ie()) {
                 window.clipboardData.setData("Text", d);
                 alert("복사되었습니다.");
