--- a/Views/Home/Edit.cshtml
+++ b/Views/Home/Edit.cshtml
@@ -204,6 +204,7 @@
 
     function sendSurveyJson(val)
     {
+        console.log(val);
         $("#surveyJson").val(val);
         if(val != '')
             $("#register").text("설문수정");
