--- a/Views/Shared/Survey/_Layout.cshtml
+++ b/Views/Shared/Survey/_Layout.cshtml
@@ -9,7 +9,7 @@
     
     <title>@ViewData["Title"] - UBSurvey</title>
     
-    <!-- /*<link rel="stylesheet" href="~/lib/bootstrap/dist/css/bootstrap.css" />*/ -->
+    <!-- <link rel="stylesheet" href="~/lib/bootstrap/dist/css/bootstrap.css" /> -->
     <link rel="stylesheet" href="~/css/nanumgothic/nanumgothic.css" />
     
     @RenderSection("Scripts", required: false)
