--- a/wwwroot/css/Example/main2.css
+++ b/wwwroot/css/Example/main2.css
@@ -1,34 +1,71 @@
 
-.survey { font-family: 'Nanum Gothic';  }
+.survey { font-family: 'Nanum Gothic';   }
 .survey .header { margin-left:7px;}
-.survey .header .title { font-size:3em;}
+.survey .header .title { font-size:3em; font-size: 35px;}
+
+.barline { background-color: #32BEF9; width: 100%; height: 40px; }
+.page-set { background-color: #f5f9fb;  } /* #f5f9fb */
+/* .page {} */
+.hide { display: none; }
+.show{ }
+
+.pheader { margin:10px; padding:30px; border: #cccccc 1px solid}
+.pheader .title { margin-bottom: 30px; font-weight: bold; font-size:20px; font-family: 'ExtraBole'; color:#222222}
+.pheader .description {font-size:14px; color:#666666; line-height: 21px}
 
 
-.page-set { background-color: #f5f9fb;} /* #f5f9fb */
-.page {}
-.page .hide { display: none; }
-.page .show{ display: inline; }
-.page .header { margin-left:7px;}
-.page .header .title {font-weight: bold; font-size:1.8em;}
-.page .header .description {font-size:1.2em;}
 
+/* .btn-set { } #f5f9fb */
+/* .btn-set  button { background-color: #E7E7E7; border-radius: 2px; padding: 10px; font-size: 16px; cursor: pointer; text-decoration: none; } */
+.btn {display: inline-block;
+    padding: 6px 12px;
+    margin-bottom: 0;
+    font-size: 14px;
+    font-weight: normal;
+    line-height: 1.42857143;
+    text-align: center;
+    white-space: nowrap;
+    vertical-align: middle;
+    touch-action: manipulation;
+    cursor: pointer;
+    user-select: none;
+    background-image: none;
+    border: 1px solid transparent;
+    border-radius: 4px;}
+.btn :hover{color:#333; text-decoration:none}
+.next {color: #fff;
+    background-color: #337ab7;
+    border-color: #2e6da4;
+    float: right;
+    margin-right:10px;
+    width:78px;
+}
 
+.pre { float: right;
+    margin-right:10px; 
+    width:78px; }
+.complete { 
+    color: #fff;
+    background-color: #5cb85c;
+    border-color: #4cae4c; 
+    float: right;
+    margin-right:10px;
+    width:78px; 
+}
 
-.btn-set { } /* #f5f9fb */
-.btn-set  button { background-color: #E7E7E7; border-radius: 2px; padding: 10px; font-size: 16px; cursor: pointer; text-decoration: none; }
-.btn-set .btnNext { float: right; margin-left:7px; }
-.btn-set .btnPre { float: right;}
+.btn-set {}
 .btn-set .btnComplete { float: right; border-radius: 4px;margin-left:7px; background-color: #5bc0de; border-color: #46b8da; color:#fff; }
 
+    
 
 .questions {}
 .questions .question { margin:10px; padding:30px; background-color: white; border: 1px solid #cccccc; }
 
 .question .hide { display: none; }
-.question .show { display: inline; }
+.question .show {  }
 /* Question header */
-.question .header {font-weight: bold; padding-bottom: 5px;}
 .question .header .title { font-size: 16px; font-weight: bold; color: #222222}
+.question .header {font-weight: bold; padding-bottom: 5px;}
 .question .header .title .required { color: #FE0000;}
 
 
@@ -40,12 +77,12 @@
 .question .items { margin-left:7px;   }
 
 /* Text Box */
-.question .items .text_set {}
-.question .items .text_set .i_text {}
+/* .question .items .text_set {} */
+.question .items .text_set .i_text { font-family: 'Nanum Gothic';  font-size: 14px; color: #666666;}
 
 /* Comment Text Box */
-.question .items .comment_set {}
-.question .items .comment_set .i_comment { resize: none; }
+/* .question .items .comment_set {} */
+.question .items .comment_set .i_comment {  font-family: 'Nanum Gothic';  resize: none;  font-size: 14px; color: #666666;} 
 
 /* Radio Box */
 .question .items .radio_set { font-size:16px; }
@@ -53,10 +90,10 @@
 .question .items .radio_set .lbl_radio { cursor: pointer; }
 
 /* Other Radio Box */
-.question .items .radio_other {}
+/* .question .items .radio_other {} */
 .question .items .radio_other .i_radio_other { margin-right:3px; cursor: pointer; }
 .question .items .radio_other .lbl_radio_other { margin-right:3px; cursor: pointer; }
-.question .items .radio_other .txt_radio_other {}
+.question .items .radio_other .txt_radio_other { font-family: 'Nanum Gothic';  font-size: 14px; color: #666666; }
 
 /* CheckBox Box */
 .question .items .checkbox_set { font-size:16px; }
@@ -64,24 +101,25 @@
 .question .items .checkbox_set .lbl_checkbox { cursor: pointer; }
 
 /* Other CheckBox Box */
-.question .items .checkbox_other { }
+/* .question .items .checkbox_other { } */
 .question .items .checkbox_other .i_checkbox_other { margin-right:3px; cursor: pointer; }
 .question .items .checkbox_other .lbl_checkbox_other { margin-right:3px; cursor: pointer; }
-.question .items .checkbox_other .txt_checkbox_other { }
+.question .items .checkbox_other .txt_checkbox_other { font-family: 'Nanum Gothic';  font-size: 14px; color: #666666; }
 
 /* Rate Radio Box */
-.question .items .rate_set {}
-.question .items .rate_set .min_description { padding-right: 3px; }
-.question .items .rate_set .max_description { padding-left: 3px; }
-.question .items .rate_set .i_rate { display: none;}
-.question .items .rate_set [type=radio]:checked + label {color: #333;background-color: #e7f6fc;border-color: #14a5e6;}
-.question .items .rate_set [type=radio]:hover + label{ color: #333;background-color: #e7f6fc;border-color: #14a5e6; }
-.question .items .rate_set .lbl_rate { min-width: 5em; background-color: #FFFFFF; border: 1px solid #ccc; cursor: pointer; text-align: center; margin: 4px}
+/* .question .items .rate_set {} */
+.rate_set .min_description { padding-right: 3px; }
+.rate_set .max_description { padding-left: 3px; }
+.rate_set .i_rate { display: none;}
+.rate_set [type=radio]:checked + label {color: #333;background-color: #e7f6fc;border-color: #14a5e6;}
+.rate_set [type=radio]:hover + label{ color: #333;background-color: #e7f6fc;border-color: #14a5e6; }
+.rate_set .lbl_rate { background-color: #FFFFFF; border: 1px solid #ccc; cursor: pointer; text-align: center; margin: 4px}
+.rate_set label { min-width:6em; margin:1px; color: #333; background-color: #fff; border-color:#ccc; }
 
 /* Multi Text Box */
 .question .items .multiText_set { font-size:14px; color:#666666 }
 .question .items .multiText_set .lbl_multiText { margin-right:3px; }
-.question .items .multiText_set .i_multiText { }
+/* .question .items .multiText_set .i_multiText { } */
 
 
 
