--- a/wwwroot/css/Example/main2.css
+++ b/wwwroot/css/Example/main2.css
@@ -1,7 +1,7 @@
 
 .survey { font-family: 'Nanum Gothic';   }
-.survey .header { margin-left:7px;}
-.survey .header .title { font-size:3em; font-size: 35px;}
+.survey .header { }
+.survey .header .title { font-size:3em; font-size: 35px;margin-left:7px;}
 
 .barline { background-color: #32BEF9; width: 100%; height: 40px; }
 .page-set { background-color: #f5f9fb;  } /* #f5f9fb */
@@ -56,8 +56,6 @@
 .btn-set {}
 .btn-set .btnComplete { float: right; border-radius: 4px;margin-left:7px; background-color: #5bc0de; border-color: #46b8da; color:#fff; }
 
-    
-
 .questions {}
 .questions .question { margin:10px; padding:30px; background-color: white; border: 1px solid #cccccc; }
 
@@ -66,8 +64,9 @@
 /* Question header */
 .question .header .title { font-size: 16px; font-weight: bold; color: #222222}
 .question .header {font-weight: bold; padding-bottom: 5px;}
-.question .header .title .required { color: #FE0000;}
-
+.required { color: #FE0000;}
+.cpage {float: right; font-size:20px;}
+.tpage {float: right; font-size:20px;}
 
 /* .question .header .description { padding:4px;  font-size: 0.9em; margin-left: 10px; border:1px solid #C3C3C3;} */
 .question .header .description { font-size: 14px; margin-left: 10px; color:#14a5e6;}
