--- a/Views/Home/Edit.cshtml
+++ b/Views/Home/Edit.cshtml
@@ -17,7 +17,7 @@
         <table class="table table-bordered text-center">
             <tr>
                 <td class="info">서비스명</td>
-                <td colspan="3"><input type="text" class="form-control" v-model="channelName" ></td>
+                <td colspan="3" class="text-left">{{ channelName }}</td>
             </tr>
             <tr>
                 <td class="info">제목</td>
