--- a/Views/Home/Result.cshtml
+++ b/Views/Home/Result.cshtml
@@ -6,21 +6,28 @@
 <link rel="stylesheet" href="~/css/handsontable.min.css" />
 @section Scripts {
 <script src="~/js/handsontable.min.js"></script>
+<script src="https://www.gstatic.com/charts/loader.js"></script>
 }
-<script type="text/javascript" src="https://www.gstatic.com/charts/loader.js"></script>
 <style>
     .handsontable .htDimmed {
         white-space: nowrap;
         word-wrap: break-word;
         max-width: 200px;
     }
+    #handsonTableConatiner {
+        min-height:84vh; float:left;
+    }
+    #piechart{
+        height: 500px; float:left;
+    }
+    .row { margin : 0 !important;}
 </style>
 <div class="row">
     <div><h3> &quot;@this.Model.Item2&quot;의 결과입니다.</h3></div>
-    <div id="handsonTableConatiner" style="min-height:84vh; float:left;">
+    <div id="handsonTableConatiner">
         <div id="hot"></div>
     </div>
-    <div id="piechart" style="height: 500px; float:left;"></div>
+    <div id="piechart"></div>
 </div>
 <script>
 var dataObject = @Html.Raw(Newtonsoft.Json.JsonConvert.SerializeObject(this.Model.Item1))
@@ -94,7 +101,8 @@ $(document).ready(function(){
 
 function resizeScreen() {
     hot.updateSettings({
-        width: window.innerWidth * 0.75
+        width: window.innerWidth * 0.75,
+        height : $("#handsonTableConatiner").height()
     });
     $('#piechart').width(window.innerWidth * 0.23);
 }
