--- a/Views/Edit/Prev.cshtml
+++ b/Views/Edit/Prev.cshtml
@@ -3,12 +3,12 @@
     Layout = "~/Views/Shared/EditLayout/_Layout.cshtml";
 }
 
-<link rel="stylesheet" type="text/css" media="screen" href="~/css/Example/main2.css" />
+<link rel="stylesheet" type="text/css" href="~/css/view.css" />
 <environment include="Development">
-    <script src="~/js/Example/view2.js"></script>
+    <script src="~/js/Survey/view.js"></script>
 </environment>
 <environment include="Production">    
-    <script src="~/js/Example/view2.js"></script>
+    <script src="~/js/Survey/view.js"></script>
 </environment>
 <script>
     
