--- a/Views/Survey/Progress.cshtml
+++ b/Views/Survey/Progress.cshtml
@@ -5,14 +5,14 @@
     Layout = "~/Views/Shared/Survey/_Layout.cshtml";
     
 }
-<link rel="stylesheet" type="text/css" href="~/css/Example/main2.css" />
+<link rel="stylesheet" type="text/css" href="~/css/view.css" />
 
 <environment include="Development">
-    <script src="~/js/Example/view2.js"></script>
+    <script src="~/js/Survey/view.js"></script>
     <script src="~/lib/jquery/dist/jquery.js"></script>    
 </environment>
 <environment include="Production">    
-    <script src="~/js/Example/view2.js"></script>
+    <script src="~/js/Survey/view.js"></script>
     <script src="~/lib/jquery/dist/jquery.js"></script>    
 </environment>
 
