--- a/wwwroot/css/view.css
+++ b/wwwroot/css/view.css
@@ -7,7 +7,7 @@
 .page-set { background-color: #f5f9fb;  } /* #f5f9fb */
 /* .page {} */
 .hide { display: none; }
-.show{ }
+/* .show{ } */
 
 .pheader { margin:10px; padding:30px; border: #cccccc 1px solid}
 .pheader .title { margin-bottom: 30px; font-weight: bold; font-size:20px; font-family: 'ExtraBole'; color:#222222}
@@ -55,14 +55,14 @@
     width:78px; 
 }
 
-.btn-set {}
+/* .btn-set {} */
 .btn-set .btnComplete { float: right; border-radius: 4px;margin-left:7px; background-color: #5bc0de; border-color: #46b8da; color:#fff; }
 
-.questions {}
+/* .questions {} */
 .questions .question { margin:10px; padding:30px; background-color: white; border: 1px solid #cccccc; }
 
 .question .hide { display: none; }
-.question .show {  }
+/* .question .show {  } */
 /* Question header */
 .question .header .title { font-size: 16px; font-weight: bold; color: #222222}
 .question .header {font-weight: bold; padding-bottom: 5px;}
