--- a/Views/Shared/_Layout.cshtml
+++ b/Views/Shared/_Layout.cshtml
@@ -35,6 +35,7 @@
                     <span class="icon-bar"></span>
                 </button>
                 <a asp-area="" asp-controller="Home" asp-action="List" class="navbar-brand">UBSurvey</a>
+                <a asp-area="" asp-controller="Home" asp-action="Error" class="navbar-brand">ErrorDump</a>
             </div>
             <div class="navbar-collapse collapse">
                 <ul class="nav navbar-nav">
