--- a/Views/Home/List.cshtml
+++ b/Views/Home/List.cshtml
@@ -153,7 +153,7 @@ var vue = new Vue({
         },
         createActionUrl : function(pid){
             var params = $.param(this.searchData);
-            return '/?' + params + '&pageindex=' + pid;
+            return '@Url.Action("List", "Home")/?' + params + '&pageindex=' + pid;
         },
         deletesurvey : function(_id){
             if(!confirm('해당 설문을 삭제 하시겠습니까?')){
