SurveyInfoDTO._surveyResult BsonIgnore

--- a/Views/Home/List.cshtml
+++ b/Views/Home/List.cshtml
@@ -52,7 +52,7 @@
                 <th>NO</th>
                 <th>설문제목</th>
                 <th>기간</th>
-                <th>참여인원</th>
+                <th>참여가능인원</th>
                 <th>결과</th>
                 <th>URL복사</th>
                 <th>삭제</th>
