--- a/Views/Home/Edit.cshtml
+++ b/Views/Home/Edit.cshtml
@@ -17,27 +17,35 @@
         <table class="table table-bordered text-center">
             <tr>
                 <td class="info">서비스명</td>
-                <td colspan="3" class="text-left">{{ channelName }}</td>
+                <td colspan="3" class="text-left">{{ editinfo.ChannelName }}</td>
             </tr>
             <tr>
                 <td class="info">제목</td>
-                <td colspan="3"><input type="text" class="form-control" v-model="title" id="title" ></td>
+                <td colspan="3"><input type="text" class="form-control" v-model="editinfo.Survey.Title" id="title" ></td>
             </tr>
             <tr>
                 <td class="info" >배포기간</td>
                 <td class="form-inline">
-                    <input type="text" style="width:auto" class="form-control datepicker"  id="startDate" v-model="startDate"> ~
-                    <input type="text" style="width:auto" class="form-control datepicker" id="endDate" v-model="endDate">
+                    <input type="text" style="width:auto" class="form-control"  id="startDate" v-model="editinfo.Survey.StartDate"> ~
+                    <input type="text" style="width:auto" class="form-control" id="endDate" v-model="editinfo.Survey.EndDate">
                 </td>
                 <td class="info" >마감인원</td>
-                <td><input type="text" class="form-control " v-model="limitperson" v-on:keyup="onlyNumber" id="limitperson" ></td>
+                <td><input type="text" class="form-control " v-model="editinfo.Survey.LimitPersons" v-on:keyup="onlyNumber" id="limitperson" ></td>
             </tr>
         </table>
         <hr>
         <div class="row">
             <div class="col-sm-10">
-                <button class="btn btn-success" v-on:click="register" id="register" >{{surveyText}}</button>
-                <button class="btn btn-info" v-on:click="preView" v-if="surveyJson != ''"  >미리보기</button>
+                
+                    <button class="btn btn-success" v-on:click="register" id="register"  >
+                        <template v-if="editinfo.SurveyInfo.Survey">
+                            설문수정
+                        </template>
+                        <template v-else="">
+                            설문등록
+                        </template>
+                    </button>
+                <button class="btn btn-info" v-on:click="preView" v-if="editinfo.SurveyInfo.Survey"  >미리보기</button>
             </div>
             <div class="col-sm-2 text-right">
             <button class="btn btn-primary " v-on:click="save" >저장</button>
@@ -45,10 +53,10 @@
             
         </div>
         <form id="myform" name="myform" method="post" action="/edit/prev" target="popup_window">
-            <input type="hidden" id="surveyJson" name="survey" value="" v-model="surveyJson">
+            <input type="hidden" id="surveyJson" name="survey" value="">
         </form>
         <div>
-            
+            <!-- {{vue._data}} -->
         </div>        
 </div>
 
@@ -56,105 +64,40 @@
     var vue = new Vue({
         el: '#container',
         data : {
-            title : '@Model.survey.Title',
-            limitperson : '@Model.survey.LimitPersons',
-            startDate : '@Model.survey.StartDate.ToString("yyyy-MM-dd")',
-            endDate : '@Model.survey.EndDate.ToString("yyyy-MM-dd")',
-            surveyJson : @Html.Raw(Newtonsoft.Json.JsonConvert.SerializeObject(Model.SurveyJson)) == null ? '' : @Html.Raw(Newtonsoft.Json.JsonConvert.SerializeObject(Model.SurveyJson)),
-            surveyText : '설문등록',
-            ubSurveyID : '@Model.survey._id',
-            channelName : '@Model.ChannelName'
-
+            editinfo : @Html.Raw(Newtonsoft.Json.JsonConvert.SerializeObject(this.Model))
         },
         mounted : function(){
+            var self = this;
             $("#startDate").datepicker({
                 dateFormat: "yy-mm-dd",
+                onSelect: function(dateText) { 
+                    self.editinfo.Survey.StartDate = dateText;
+                }
             });
 
             $("#endDate").datepicker(
                 {
-                dateFormat: "yy-mm-dd"
+                dateFormat: "yy-mm-dd",
+                onSelect: function(dateText) { 
+                    self.editinfo.Survey.EndDate = dateText;
+                }
             });
-
-            if(this.surveyJson != '')
-                this.surveyText = "설문수정";
-            else
-                this.surveyText = "설문등록";
         },
         methods : {
             save : function(){
-                if($("#title").val() == '')
+                
+                if( this.editinfo.Survey.Title  == '' || this.editinfo.Survey.Title == null)
                     return alert('Title이 입력되지 않았습니다.');
-
-                var surveyJson = $("#surveyJson").val();
-                var sruveyObjID = '@Model.survey.SurveyID';
-
-                if(surveyJson != '')
-                {   
-                    var data = {
-                        _channelID : '@Model.survey.ChannelID',
-                        Survey : JSON.parse(surveyJson),
-                        _id : '@Model.survey.SurveyID'
-                    }
-                    var self = this;
-                    $.ajax({
-                        type : 'post',
-                        url : '/api/survey/save',
-                        contentType: 'application/json',
-                        data : JSON.stringify(data),
-                        success : function (res) {
-                            if(res.success)
-                            {
-                                sruveyObjID = res.data._id   
-                                self.saveUBSurvey(sruveyObjID);
-
-                            }else{
-                                alert(res.message);
-                            }
-                        }, 
-                        error: function(XMLHttpRequest, textStatus, errorThrown) { 
-                            alert("Status: " + textStatus); alert("Error: " + errorThrown); 
-                        }   
-                    });
-                }else
-                {
-                    this.saveUBSurvey(sruveyObjID);
-                }
-            },
-            register: function(){
-                    
-                var param = '@Html.Raw(Model.UrlParameter)';
-                var actionUrl = '@Html.Raw(@Url.Action("index","Edit"))' + param;
                 
-                var child = window.open(actionUrl,'_blank');
-                if( child.opener == null)
-                    child.opener = self;
-
-            },
-            onlyNumber : function(e){
-                var obj = this;
-                obj.limitperson = obj.limitperson.replace(/[^0-9]/g,"");
-            },
-            saveUBSurvey : function(sruveyObjID){
-                
-                var data = {
-                                channelID : '@Model.survey.ChannelID',
-                                _id : '@Model.survey._id',
-                                SurveyID : sruveyObjID,
-                                Title : $("#title").val(),
-                                StartDate : $("#startDate").val(),
-                                EndDate : $("#endDate").val(),
-                                LimitPersons : $("#limitperson").val()
-                            }
                 $.ajax({
                     type : 'post',
                     url : '/api/UBSurvey/save',
                     contentType: 'application/json',
-                    data : JSON.stringify(data),
+                    data : JSON.stringify(this.editinfo),
                     success : function (res) {
                         if(res.success)
                         {
-                            var url = '/home/List?channelid=' + '@Model.survey.ChannelID';
+                            var url = '/home/List?channelid=' + '@Model.Survey.ChannelID';
                             $(location).attr('href',url);
                         } 
                         else
@@ -167,9 +110,24 @@
                     }   
                 });
             },
+            register: function(){
+                    
+                var actionUrl = '@Html.Raw(@Url.Action("index","Edit"))' + this.editinfo.UrlParameter;
+                
+                var child = window.open(actionUrl,'_blank');
+                if( child.opener == null)
+                    child.opener = self;
+
+            },
+            onlyNumber : function(e){
+                var obj = this;
+                obj.limitperson = obj.limitperson.replace(/[^0-9]/g,"");
+            },
             preView : function(){
 
-                 window.open("", "popup_window", "width=1000, height=900, scrollbars=no");                
+                 window.open("", "popup_window", "width=1000, height=900, scrollbars=no");
+                 $("#surveyJson").val( JSON.stringify(this.editinfo.SurveyInfo.Survey));
+                 //console.log()
                 $("#myform").submit();
             }
         }
@@ -177,10 +135,7 @@
 
     function sendSurveyJson(val)
     {
-        console.log(val);
-        $("#surveyJson").val(val);
-        if(val != '')
-            $("#register").text("설문수정");
+        vue._data.editinfo.SurveyInfo.Survey = JSON.parse(val);
     }
 
 </script>
