--- a/Views/Shared/Survey/_Layout.cshtml
+++ b/Views/Shared/Survey/_Layout.cshtml
@@ -15,6 +15,13 @@
     @RenderSection("Scripts", required: false)
 </head>
 <body>
-    @RenderBody()
+   <div id="bodyContents" class="container body-content">
+        @RenderBody()
+        
+    </div>
+    <hr />
+        <footer style="text-align: center;">
+            <p >&copy; 2018 - UBcare</p>
+        </footer>
 </body>
 </html>
