--- a/wwwroot/css/view.css
+++ b/wwwroot/css/view.css
@@ -38,25 +38,23 @@
 .next {color: #fff;
     background-color: #337ab7;
     border-color: #2e6da4;
-    float: right;
     margin-right:10px;
     width:78px;
 }
 
-.pre { float: right;
+.pre {
     margin-right:10px; 
     width:78px; }
 .complete { 
     color: #fff;
     background-color: #5cb85c;
     border-color: #4cae4c; 
-    float: right;
     margin-right:10px;
     width:78px; 
 }
 
 /* .btn-set {} */
-.btn-set .btnComplete { float: right; border-radius: 4px;margin-left:7px; background-color: #5bc0de; border-color: #46b8da; color:#fff; }
+.btn-set {text-align: right;}
 
 /* .questions {} */
 .questions .question { margin:10px; padding:30px; background-color: white; border: 1px solid #cccccc; }
