--- a/Views/Shared/EditLayout/_Layout.cshtml
+++ b/Views/Shared/EditLayout/_Layout.cshtml
@@ -17,7 +17,7 @@
 <environment include="Production">
     <script src="~/lib/jquery/dist/jquery.min.js"></script>
     <script src="~/lib/bootstrap/dist/js/bootstrap.min.js"></script>
-    <script src="~/lib/underscore/underscore.min.js"></script>
+    <script src="~/lib/underscore/underscore-min.js"></script>
 </environment>
     @RenderSection("Scripts", required: false)
 </head>
