--- a/Views/Home/Edit.cshtml
+++ b/Views/Home/Edit.cshtml
@@ -68,18 +68,18 @@
 
         computed : {
             startDate :{
-                get(){
+                get : function() {
                     return this.formatDate(this.editinfo.Survey.StartDate);
                 },
-                set(newVal){
+                set : function(newVal){
                     this.editinfo.Survey.StartDate = newVal;   
                 }
             },
             endDate :{
-                get(){
+                get : function() {
                     return this.formatDate(this.editinfo.Survey.EndDate);
                 },
-                set(newVal){
+                set: function(newVal){
                     this.editinfo.Survey.EndDate = newVal;   
                 }
             }
@@ -112,6 +112,9 @@
 
                 if(this.editinfo.Survey.LimitPersons == '' )
                     return alert('마감인원이 올바르지 않습니다.');
+
+                // 새 등록 일경우 아래 와 같이 set 하지 않으면 오류 난다....... 재성 임의로 여기다가 박았는데.. 바꿔줘
+                this.editinfo.SurveyInfo._channelID = this.editinfo.Survey.ChannelID;
                 
                 $.ajax({
                     type : 'post',
