--- a/wwwroot/css/view.css
+++ b/wwwroot/css/view.css
@@ -64,7 +64,7 @@
 /* Question header */
 .question .header .title { font-size: 16px; font-weight: bold; color: #222222}
 .question .header {font-weight: bold; padding-bottom: 5px;}
-.required { color: #FE0000;}
+.required { color: #FE0000; margin-right: 3px;}
 
 
 /* .question .header .description { padding:4px;  font-size: 0.9em; margin-left: 10px; border:1px solid #C3C3C3;} */
