설문 미등록시 화면 구성

--- a/Views/Home/List.cshtml
+++ b/Views/Home/List.cshtml
@@ -67,7 +67,10 @@
             <td>{{s.LimitPersonsStr}}</td>
             <td>{{s.CurrentStatusStr}}</td>
             <td class="text-center"><a v-on:click="resultPageRedirect(s._id)" href="#" >결과보기</a> </td>
-            <td class="text-center"><button v-if="s.SurveyID != null" class="btn btn-info" v-on:click="copy_to_clipboard(s._id)" >복사</button> </td>
+            <td class="text-center">
+                <button v-if="s.SurveyID != null" class="btn btn-info" v-on:click="copy_to_clipboard(s._id)" >복사</button> 
+                <template v-if="s.SurveyID == null">미등록</template>
+            </td>
             <td class="text-center"><button class="btn btn-danger" v-on:click="deletesurvey(s._id)" >삭제</button> </td>
         </tr>     
     </table>
