--- a/Views/Home/List.cshtml
+++ b/Views/Home/List.cshtml
@@ -56,7 +56,7 @@
                 <th>참여/마감</th>
                 <th>상태</th>
                 <th>결과</th>
-                <th>URL복사</th>
+                <th>URL</th>
                 <th>삭제</th>
             </tr>
         </thead>
